objects/WorkOrderLineItem.object
<CustomObject>
    <fields>
        <fullName>County_City_Sticker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>County City Sticker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Lifetime_Meter__c</fullName>
        <label>Current Lifetime Meter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__VisitingHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visiting Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_Period_Meter_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Period Meter Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PM_Status__c</fullName>
        <label>PM Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PM_Completed</fullName>
                    <label>PM Completed</label>
                </value>
                <value>
                    <fullName>NotComplete</fullName>
                    <label>PM  Not Completed</label>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                    <label>PM Partially Completed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Period_Meter__c</fullName>
        <label>Period Meter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Physical_Count__c</fullName>
        <label>Physical Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Lifetime_Meter__c</fullName>
        <label>Previous Lifetime Meter</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Site_Grade__c</fullName>
        <label>Site Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Notes__c</fullName>
        <label>Site Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Add_Swap_Reconfigure</fullName>
        <active>true</active>
        <label>Add/Swap/Reconfigure</label>
    </recordTypes>
    <recordTypes>
        <fullName>Collection</fullName>
        <active>true</active>
        <label>Collection</label>
    </recordTypes>
    <recordTypes>
        <fullName>Preventative_Maintenance_Work_Order_Line_Item</fullName>
        <active>true</active>
        <label>Preventative Maintenance Work Order Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Replenishment</fullName>
        <active>true</active>
        <label>Replenishment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Period_Meter_And_Checkbox</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;Collection&quot;,
ISBLANK(Period_Meter__c), 
No_Period_Meter_Needed__c = FALSE
)</errorConditionFormula>
        <errorMessage>Please fill out the Period Meter or select No Period Meter Needed</errorMessage>
    </validationRules>
</CustomObject>